--- a/less/custom.less
+++ b/less/custom.less
@@ -144,6 +144,9 @@ body {
 
 /* Admin Nav */
 
+.admin-navbar-brand {
+}
+
 .admin-nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
