Changes to Less
Addded Cursor to Hamburger Icon to show it's clickable
Changed Share link background and text colour
Added span for both div id=time and Welcome User in preperation for replacing <a> with <span> to get around :hover class being run on non clickable text.

--- a/less/custom.less
+++ b/less/custom.less
@@ -13,6 +13,9 @@ body {
 .main-nav {
 	position:relative!important;
 }
+ul.nav.nav-pills.account-sub-links li {
+    margin-left: 15px;
+}
 .navbar-header {
 	width:100%;
   list-style: none;
@@ -26,6 +29,9 @@ body {
 }
 .userimage {
   height: 19px;
+}
+#user_label.dropdown.userbar span {
+    color: #1d9977;
 }
 .home .icon {
   margin-bottom: 0px !important;
@@ -81,7 +87,7 @@ body {
   position: fixed;
   left: -300px;
   background: #222222;
-  padding: 15px;
+  padding: 15px;f
   margin-top:-10px!important;
 }
 .site-menu-top {
@@ -94,6 +100,7 @@ body {
 .toggle-nav {
 	left:10px;
 	position: fixed;
+	cursor:pointer;
 }
 .toggle-notifications {
   left:4px;
@@ -143,9 +150,6 @@ body {
 }
 
 /* Admin Nav */
-
-.admin-navbar-brand {
-}
 
 .admin-nav {
   margin-bottom: 0;
@@ -256,9 +260,9 @@ body {
   border-bottom: 0px !important;
 }
 .form-control {
-  background-color:#666;
-  border: 1px solid #666;
-  color:#999;
+  background-color:#fff;
+  border: 1px solid #fff;
+  color:#1d9977;
   box-shadow: none;
   -webkit-box-shadow: none;
   transition: none;
@@ -271,6 +275,9 @@ body {
   font-size:12px;
   color:#999;
   width:300px;
+}
+.time.pull-left span {
+    color: #1d9977;
 }
 
 /* Slide Categories */
