Revert "Changes to Less"

--- a/less/custom.less
+++ b/less/custom.less
@@ -13,9 +13,6 @@ body {
 .main-nav {
 	position:relative!important;
 }
-ul.nav.nav-pills.account-sub-links li {
-    margin-left: 15px;
-}
 .navbar-header {
 	width:100%;
   list-style: none;
@@ -29,9 +26,6 @@ ul.nav.nav-pills.account-sub-links li {
 }
 .userimage {
   height: 19px;
-}
-#user_label.dropdown.userbar span {
-    color: #1d9977;
 }
 .home .icon {
   margin-bottom: 0px !important;
@@ -87,7 +81,7 @@ ul.nav.nav-pills.account-sub-links li {
   position: fixed;
   left: -300px;
   background: #222222;
-  padding: 15px;f
+  padding: 15px;
   margin-top:-10px!important;
 }
 .site-menu-top {
@@ -100,7 +94,6 @@ ul.nav.nav-pills.account-sub-links li {
 .toggle-nav {
 	left:10px;
 	position: fixed;
-	cursor:pointer;
 }
 .toggle-notifications {
   left:4px;
@@ -150,6 +143,9 @@ ul.nav.nav-pills.account-sub-links li {
 }
 
 /* Admin Nav */
+
+.admin-navbar-brand {
+}
 
 .admin-nav {
   margin-bottom: 0;
@@ -260,9 +256,9 @@ ul.nav.nav-pills.account-sub-links li {
   border-bottom: 0px !important;
 }
 .form-control {
-  background-color:#fff;
-  border: 1px solid #fff;
-  color:#1d9977;
+  background-color:#666;
+  border: 1px solid #666;
+  color:#999;
   box-shadow: none;
   -webkit-box-shadow: none;
   transition: none;
@@ -275,9 +271,6 @@ ul.nav.nav-pills.account-sub-links li {
   font-size:12px;
   color:#999;
   width:300px;
-}
-.time.pull-left span {
-    color: #1d9977;
 }
 
 /* Slide Categories */
