--- a/less/custom.less
+++ b/less/custom.less
@@ -5,16 +5,19 @@ html {
 }
 
 body {
-	padding-top: 0px !important;
-	height: 100% !important;
+  padding-top: 0px !important;
+  height: 100% !important;
   min-height:100% !important;
   background: url(http://subtlepatterns.com/patterns/brushed.png) repeat;
 }
 .main-nav {
-	position:relative!important;
+  position:relative!important;
+}
+ul.nav.nav-pills.account-sub-links li {
+    margin-left: 15px;
 }
 .navbar-header {
-	width:100%;
+  width:100%;
   list-style: none;
 }
 .navbar-brand {
@@ -26,6 +29,9 @@ body {
 }
 .userimage {
   height: 19px;
+}
+#user_label.dropdown.userbar span {
+    color: #1d9977;
 }
 .home .icon {
   margin-bottom: 0px !important;
@@ -92,8 +98,9 @@ body {
   z-index:auto;
 }
 .toggle-nav {
-	left:10px;
-	position: fixed;
+  left:10px;
+  position: fixed;
+  cursor:pointer;
 }
 .toggle-notifications {
   left:4px;
@@ -120,10 +127,10 @@ body {
   top:90px;
 }
 .loading {
-	left:4px;
-	top:110px;
-	position: fixed;
-	margin-top:20px;
+  left:4px;
+  top:110px;
+  position: fixed;
+  margin-top:20px;
 }
 .loggedin-nav {
   width:100%;
@@ -134,18 +141,15 @@ body {
   &:extend(.clearfix all);
 }
 .userbar {
-	margin-right:8px;
+  margin-right:8px;
   width:auto !important;
 }
 #user-header-picture {
-	height:38px;
+  height:38px;
   border-radius: 50%;
 }
 
 /* Admin Nav */
-
-.admin-navbar-brand {
-}
 
 .admin-nav {
   margin-bottom: 0;
@@ -258,7 +262,7 @@ body {
 .form-control {
   background-color:#666;
   border: 1px solid #666;
-  color:#999;
+  color:#1d9977;
   box-shadow: none;
   -webkit-box-shadow: none;
   transition: none;
@@ -271,6 +275,9 @@ body {
   font-size:12px;
   color:#999;
   width:300px;
+}
+.time.pull-left span {
+    color: #1d9977;
 }
 
 /* Slide Categories */
