--- a/less/custom.less
+++ b/less/custom.less
@@ -262,7 +262,7 @@ ul.nav.nav-pills.account-sub-links li {
 .form-control {
   background-color:#666;
   border: 1px solid #666;
-  color:#1d9977;
+  color:#ccc;
   box-shadow: none;
   -webkit-box-shadow: none;
   transition: none;
